--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "BuddhaCop",
-	"name": "Buddha Cop Visual Novel",
+	"short_name": "Buddha Cop",
+	"name": "Buddha Cop - Woke Vengeance | Samsara Universe",
 	"background_color": "#F7F7F7",
 	"theme_color": "#F7F7F7",
 	"orientation": "landscape",
